new file:   Project Proposal Form.docx 	modified:   Randeepa_latex/root.aux 	modified:   Randeepa_latex/root.lof 	modified:   Randeepa_latex/root.log 	modified:   Randeepa_latex/root.lot 	modified:   Randeepa_latex/root.out 	modified:   Randeepa_latex/root.pdf 	modified:   Randeepa_latex/root.synctex.gz 	modified:   Randeepa_latex/root.toc 	modified:   Randeepa_latex/title.tex 	new file:   Word_doc/OneDrive-2018-03-20/Introduction.docx 	new file:   Word_doc/OneDrive-2018-03-20/Methodology.docx 	new file:   Word_doc/OneDrive-2018-03-20/VLCbasedAuthenticationProtocolDesignedForLocationBasedNetworkConnectivity_V2.docx

--- a/Randeepa_latex/title.tex
+++ b/Randeepa_latex/title.tex
@@ -9,7 +9,7 @@
         
         %\newline
         \Huge
-        \textbf{LOCATION BASED AUTHENTICATION USING WI-FI SIGNAL STRENGTH}
+        \textbf{VISUAL LIGHT COMMUNICATION FOR LOCATION BASED Wi-Fi CONNECTIVITY}
         
 
         
@@ -21,7 +21,7 @@
         \vfill
         
         A thesis presented for the degree of\\
-        Master of Science in Information Security
+        Master of Computer Science
         
         \vspace{0.8cm}
         
